apps/docs/content/docs/orm/v6/reference/connection-urls.mdx
---
title: Connection URLs
description: 'Learn about the format and syntax Prisma ORM uses for defining database connection URLs for PostgreSQL, MySQL and SQLite.'
url: /orm/v6/reference/connection-urls
metaTitle: Connection URLs (Reference)
metaDescription: 'Learn about the format and syntax Prisma ORM uses for defining database connection URLs for PostgreSQL, MySQL and SQLite.'
---

Prisma ORM needs a connection URL to be able to connect to your database, e.g. when sending queries with [Prisma Client](/orm/v6/prisma-client/setup-and-configuration/introduction) or when changing the database schema with [Prisma Migrate](/orm/v6/prisma-migrate/getting-started).

The connection URL is provided via the `url` field of a `datasource` block in your Prisma config (or Prisma schema if on version 6). It usually consists of the following components (except for SQLite and [Prisma Postgres](/postgres)):

- **User**: The name of your database user
- **Password**: The password for your database user
- **Host**: The IP or domain name of the machine where your database server is running
- **Port**: The port on which your database server is running
- **Database name**: The name of the database you want to use

Make sure you have this information at hand when getting started with Prisma ORM. If you don't have a database server running yet, you can either use a local SQLite database file (see the [Quickstart](/v7/prisma-orm/quickstart/sqlite)) or [setup a free PostgreSQL database with Prisma Postgres](/postgres).

## Format

The format of the connection URL depends on the _database connector_ you're using. Prisma ORM generally supports the standard formats for each database. You can find out more about the connection URL of your database on the dedicated docs page:

- [PostgreSQL](/orm/v6/overview/databases/postgresql)
- [MySQL](/orm/v6/overview/databases/mysql)
- [SQLite](/orm/v6/overview/databases/sqlite)
- [MongoDB](/orm/v6/overview/databases/mongodb)
- [Microsoft SQL Server](/orm/v6/overview/databases/sql-server)
- [CockroachDB](/orm/v6/overview/databases/cockroachdb)

### Special characters

For MySQL, PostgreSQL and CockroachDB you must [percentage-encode special characters](https://developer.mozilla.org/en-US/docs/Glossary/Percent-encoding) in any part of your connection URL - including passwords. For example, `p@$$w0rd` becomes `p%40%24%24w0rd`.

For Microsoft SQL Server, you must [escape special characters](/orm/v6/overview/databases/sql-server#connection-details) in any part of your connection string.

## Examples

Here are examples for the connection URLs of the databases Prisma ORM supports:

### Prisma Postgres

[Prisma Postgres](/postgres) is a managed PostgreSQL service running on unikernels. There are several ways to connect to Prisma Postgres:

- via direct TCP connections (lets you connect via any ORM or database tool)
- via pooled TCP connections (recommended for serverless and high-concurrency workloads)
- via the hosted [Prisma Accelerate](/accelerate) connection (retiring December 1, 2026)
- locally

The connection string formats of these are covered below.

#### Direct TCP

When you connect to Prisma Postgres via direct TCP, your connection string looks as follows:

```bash
DATABASE_URL="postgres://USER:PASSWORD@db.prisma.io:5432/postgres?sslmode=require"
```

The `USER` and `PASSWORD` values are provided when you generate credentials for your Prisma Postgres instance in the [Prisma Console](https://console.prisma.io).

#### Pooled TCP

When you connect to Prisma Postgres via pooled TCP, your connection string looks as follows:

```bash title=".env"
DATABASE_URL="postgres://USER:PASSWORD@pooled.db.prisma.io:5432/?sslmode=require"
```

Use a pooled TCP connection string for serverless, bursty, or high-concurrency workloads. Learn more in [Connection pooling](/postgres/database/connection-pooling).

#### Via Prisma Accelerate (HTTP, retiring)

:::warning[Hosted Accelerate connection retirement]

The hosted `prisma+postgres://accelerate.prisma-data.net` connection ends on December 1, 2026. Existing Prisma Postgres customers should [switch to pooled TCP or the Prisma Postgres serverless driver](/postgres/database/switch-from-accelerate).

This does not affect Local Postgres `prisma+postgres://localhost` URLs.

:::

When connecting via Prisma Accelerate, the connection string doesn't require a user/password like a conventional connection string does. Instead, authentication works via an API key:

```ts title="prisma.config.ts" tab="Prisma 7"
export default defineConfig({
  datasource: {
    url: "prisma+postgres://accelerate.prisma-data.net/?api_key=API_KEY"
  },
});
```

```prisma title="schema.prisma" tab="Prisma 6"
datasource db {
  provider = "postgresql"
  url      = "prisma+postgres://accelerate.prisma-data.net/?api_key=API_KEY"
} 
```

In this snippet, `API_KEY` is a placeholder for the API key generated by the [Prisma Console](https://console.prisma.io).

#### Local Prisma Postgres

The connection string for connecting to a [local Prisma Postgres](/local-development/postgres) instance mirrors the structure of a remote instance via Accelerate:

```ts title="prisma.config.ts" tab="Prisma 7"
export default defineConfig({
  datasource: {
    url: "prisma+postgres://localhost:51213/?api_key=__API_KEY__"
  },
});
```

```prisma title="schema.prisma" tab="Prisma 6"
datasource db {
  provider = "postgresql"
  url      = "prisma+postgres://localhost:51213/?api_key=__API_KEY__"
} 
```

However, in this case the `API_KEY` doesn't provide authentication details. Instead, it encodes information about the local Prisma Postgres instance. You can obtain a local connection string via the [`prisma dev`](/orm/v6/reference/prisma-cli-reference#dev) command.

### PostgreSQL

```ts title="prisma.config.ts" tab="Prisma 7"
export default defineConfig({
  datasource: {
    url: "postgresql://janedoe:mypassword@localhost:5432/mydb?schema=sample"
  },
});
```

```prisma title="schema.prisma" tab="Prisma 6"
datasource db {
  provider = "postgresql"
  url      = "postgresql://janedoe:mypassword@localhost:5432/mydb?schema=sample"
}
```

### MySQL

```ts title="prisma.config.ts" tab="Prisma 7"
export default defineConfig({
  datasource: {
    url: "mysql://janedoe:mypassword@localhost:3306/mydb"
  },
});
```

```prisma title="schema.prisma" tab="Prisma 6"
datasource db {
  provider = "mysql"
  url      = "mysql://janedoe:mypassword@localhost:3306/mydb"
}
```

### Microsoft SQL Server

```ts title="prisma.config.ts" tab="Prisma 7"
export default defineConfig({
  datasource: {
    url: "sqlserver://localhost:1433;initial catalog=sample;user=sa;password=mypassword;"
  },
});
```

```prisma title="schema.prisma" tab="Prisma 6"
datasource db {
  provider = "sqlserver"
  url      = "sqlserver://localhost:1433;initial catalog=sample;user=sa;password=mypassword;"
}
```

### SQLite

```ts title="prisma.config.ts" tab="Prisma 7"
export default defineConfig({
  datasource: {
    url: "file:./dev.db"
  },
});
```

```prisma title="schema.prisma" tab="Prisma 6"
datasource db {
  provider = "sqlite"
  url      = "file:./dev.db"
}
```

### CockroachDB

```ts title="prisma.config.ts" tab="Prisma 7"
export default defineConfig({
  datasource: {
    url: "postgresql://janedoe:mypassword@localhost:26257/mydb?schema=public"
  },
});
```

```prisma title="schema.prisma" tab="Prisma 6"
datasource db {
  provider = "cockroachdb"
  url      = "postgresql://janedoe:mypassword@localhost:26257/mydb?schema=public"
}
```

### MongoDB

_Support for MongoDB is limited to Prisma 6. We're working on support for MongoDB in Prisma 7_

```prisma title="schema.prisma"
datasource db {
  provider = "mongodb"
  url      = "mongodb+srv://root:<password>@cluster0.ab1cd.mongodb.net/myDatabase?retryWrites=true&w=majority"
}
```

## .env

You can also provide the connection URL as an environment variable:

```prisma title="schema.prisma"
datasource db {
  provider = "postgresql"
}
```

You can then either set the environment variable in your terminal or by providing a [dotenv](https://github.com/motdotla/dotenv) file named `.env`. This will automatically be picked up by the Prisma CLI.

Prisma ORM reads the connection URL from the dotenv file in the following situations:

- When it updates the schema during build time
- When it connects to the database during run time

```
DATABASE_URL=postgresql://janedoe:mypassword@localhost:5432/mydb
```
